# unbag2

./: CMakeLists.txt  LICENSE.txt  README.md  default_pipes.xml  package.xml  unbag
cfg/: unbag2.yml
include/unbag2/: generic_subscription.hpp  pipe.hpp  unbag_context.hpp  unbag_node.hpp  wild_msg.hpp
include/unbag2/pipe/: gps_pipe.hpp  imu_pipe.hpp  json_pipe.hpp  json_utils.hpp  logger_pipe.hpp  odom_pipe.hpp  pipe_base.hpp
launch/: unbag2.py
src/: generic_subscription.cpp  pipe.cpp  unbag2.cpp  unbag_main.cpp  unbag_node.cpp  wild_msg.cpp
src/pipe/: gps_pipe.cpp  imu_pipe.cpp  logger_pipe.cpp  odom_pipe.cpp
